# tweet_predict

./: .gitignore  404.html  Anchor.toml  CNAME  Cargo.toml  README.md  admin.html  admin.txt  deploy.sh  index.html  index.txt  my-markets.html  my-markets.txt  render-build.sh  render.yaml  tweetpredict.html
.github/workflows/: deploy.yml
Solana_wallett/: authority-keypair.json  oracle-keypair.json  tweetpredict-oracle-docs.txt  tweetpredict-oracle.json  wallet_docs.md
_next/static/chunks/: 10.695b539978bbeb71.js  10.e63c63b79dad4315.js  135-f22a1b3686bbdb56.js  173.79e30971d9a90463.js  23-4eb65c8354b32cc0.js  23-a376bedde5bff4dc.js  23-edc63c52bafd953a.js  248.02fbb6f296813517.js  294-e4346d5cc85cc281.js  3a91511d-95cdb08b766fd330.js  3a91511d-d0fce596c7417085.js  432-62121d1e4cfee7ff.js  458.53a98d434a01c687.js  529-0306c7e997162513.js  54-e76fcdadcc75b226.js  575-178a6d35fac2dc49.js  612-316b0f5ea64ca448.js  612-3bf472399fe61b41.js  612-57293ad63f4b611c.js  754.6f28c77371602f79.js  772.11eeb92d53ca7329.js  85.2d1311b514112e33.js  870.30cc33911c634219.js  main-725df8c16c18a79d.js  (+8 more)
app/api/: debug-anchor.js  fix-idl-properly.js  idl.json  index.js  package-lock.json  package.json  parse-idl-for-create.js  test-encoder.js  test-instruction.js  test_accounts.js  test_anchor.js
app/bot/: package-lock.json  package.json
app/frontend/: admin.txt  index.html  my-markets.txt  next.config.mjs  nohup.out  package-lock.json  package.json
my-markets/: index.html  index.txt
programs/tweet-predict/: Cargo.toml
programs/tweet-predict/src/: lib.rs
(+25 files in other folders)
