[package]
name = "tweet-predict"
version = "0.1.0"
description = "TweetPredict — Solana prediction markets powered by D3X tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tweet_predict"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Increase SBF stack size from 4096 to 16384 bytes for CreateMarket instruction
[target.bpfel-unknown-unknown.build-override]
rustflags = ["-C", "link-arg=--stack-size=16384"]

